--- a/lab3_part1_lw.Rmd
+++ b/lab3_part1_lw.Rmd
@@ -34,6 +34,72 @@ ggplot(data = adelie_chinstrap, aes(x = body_mass_g, y = flipper_length_mm))+
   facet_wrap(~species)
 ```
 
+Binary logistic regression
+
+- body mass
+- flipper length
+- penguin sex
+
+```{r}
+adelie_chinstrap_blr <- glm(species ~ body_mass_g + flipper_length_mm + sex,
+                            data = adelie_chinstrap,
+                            family = "binomial")
+```
+
+Take a look at the outcomes:
+```{r}
+adelie_chinstrap_blr
+
+summary(adelie_chinstrap_blr)
+```
+```{r}
+ggplot(data = adelie_chinstrap, aes(x = species, y = flipper_length_mm))+
+  geom_jitter(aes(color = sex))
+```
+
+What are the actual probabilities of being Chinstrap for each of the existing observation in our adelie_chinstrap data frame?
+
+```{r}
+blr_fitted <- adelie_chinstrap_blr %>% 
+  broom::augment(type.predict = "response") 
+```
+
+Plotting fitter probabilities:
+```{r}
+ggplot(data = blr_fitted, aes(x = flipper_length_mm, y = .fitted))+
+  geom_point(aes(color = sex, pch = species))+
+  geom_smooth(aes(color = sex), se = FALSE)+
+  labs(x="Flipper length (mm)",
+       y="Probability of outcome Chinstrap")
+```
+
+Plot model based on different variables:
+```{r}
+effect_plot(adelie_chinstrap_blr, 
+            pred = flipper_length_mm,
+            y.label = "Probability of Chinstrap",
+            interval = TRUE)
+
+effect_plot(adelie_chinstrap_blr, 
+            pred = body_mass_g,
+            y.label = "Probability of Chinstrap",
+            interval = TRUE)
+```
+
+
+What is the probability that a female penguin weighing 3410 g with a flipper length of 192mm is a Chinstrap?
+
+```{r}
+ex_1 <- predict(adelie_chinstrap_blr,
+                data.frame(sex = "female",
+                           body_mass_g = 3410,
+                           flipper_length_mm = 192),
+                type = "response")
+
+ex_1
+
+```
+
 
 
 
